<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_bottom"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:orientation="horizontal">

    <TextView
        style="@style/home_style_foot"
        android:id="@+id/tv_home"
        android:drawableTop="@drawable/home_icon_selector"
        android:text="@string/tab_home" />

    <TextView
        style="@style/home_style_foot"
        android:id="@+id/tv_consult"
        android:drawableTop="@drawable/zixun_icon_selector"
        android:text="@string/tab_doctor" />

    <TextView
        style="@style/home_style_foot"
        android:id="@+id/tv_ngo"
        android:drawableTop="@drawable/zixun_icon_selector"
        android:text="@string/tab_ngo" />

    <TextView
        style="@style/home_style_foot"
        android:id="@+id/tv_user"
        android:drawableTop="@drawable/user_icon_selector"
        android:text="@string/tab_user" />

</LinearLayout>