<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/toolbar_layout" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="30dp"
                android:text="@string/regist_psd"
                android:textColor="@android:color/black"
                android:textSize="23sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="@string/psd_des"
                android:textColor="@color/color_75787b"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/et_psd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/gray_corner_shape"
                android:hint="@string/user_psd"
                android:inputType="textPassword"
                android:padding="15dp"
                android:textColor="@color/color_343638"
                android:textColorHint="@color/color_75787b"
                android:textSize="@dimen/text_commen_size" />

            <EditText
                android:id="@+id/et_psd_sure"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/gray_corner_shape"
                android:hint="@string/psd_sure"
                android:inputType="textPassword"
                android:padding="15dp"
                android:textColor="@color/color_343638"
                android:textColorHint="@color/color_75787b"
                android:textSize="@dimen/text_commen_size" />

            <Button
                android:id="@+id/but_regist"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:background="@drawable/blue_corner_shape"
                android:onClick="commit"
                android:text="@string/commit"
                android:textColor="@android:color/white"
                android:textSize="@dimen/size_17sp" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>

