<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_f6f6f6">

    <LinearLayout
        android:id="@+id/ll_user_page"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <View
            android:id="@+id/view_padding"
            android:layout_width="match_parent"
            android:layout_height="0dp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@mipmap/bg_user">

            <ImageButton
                android:id="@+id/ib_config"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:background="@null"
                android:onClick="toConfig"
                android:padding="10dp"
                android:src="@mipmap/icon_confi"
                />

            <LinearLayout
                android:id="@+id/ll_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center_horizontal"
                android:layout_margin="50dp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/iv_user_pic"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@mipmap/icon_user_pic_default" />

                <TextView
                    android:id="@+id/tv_user_name"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/iv_user_pic"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    android:padding="5dp"
                    android:gravity="center"
                    android:background="@drawable/border_white_no_trans"
                    android:textStyle="bold"
                    android:maxLines="1"
                    android:ellipsize="end"
                    android:text="@string/login"
                    android:textColor="@color/color_4588ec"
                    android:textSize="@dimen/text_commen_size" />

            </LinearLayout>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@android:color/white"
            android:layout_marginBottom="10dp"
            android:padding="10dp">

            <ImageView
                android:id="@+id/iv_my_yy"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:src="@mipmap/icon_my_yy"/>

            <ImageView
                android:id="@+id/iv_my_dbsx"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:src="@mipmap/icon_my_dbsx"/>
        </LinearLayout>

        <!--<TextView-->
            <!--android:id="@+id/tv_collect"-->
            <!--style="@style/user_text_style"-->
            <!--android:visibility="gone"-->
            <!--android:drawableLeft="@mipmap/icon_collect"-->
            <!--android:text="@string/collect" />-->

        <!--<include layout="@layout/line_margin_layout" />-->

        <!--<TextView-->
            <!--android:id="@+id/tv_news_center"-->
            <!--style="@style/user_text_style"-->
            <!--android:visibility="gone"-->
            <!--android:drawableLeft="@mipmap/icon_news_center"-->
            <!--android:text="@string/news_center" />-->

        <TextView
            android:id="@+id/tv_checks"
            style="@style/user_text_style"
            android:drawableLeft="@mipmap/icon_feedback"
            android:text="@string/jiancebao" />

        <include layout="@layout/line_margin_layout" />

        <TextView
            android:id="@+id/tv_check_result"
            style="@style/user_text_style"
            android:drawableLeft="@mipmap/icon_check_result"
            android:text="@string/jianceresult" />

        <include layout="@layout/line_margin_layout" />

        <TextView
            android:id="@+id/tv_feedback"
            style="@style/user_text_style"
            android:drawableLeft="@mipmap/icon_feedback"
            android:text="@string/feedback" />

        <include layout="@layout/line_margin_layout" />

        <LinearLayout
            android:id="@+id/ll_check_version"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:background="@android:color/white"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:drawableLeft="@mipmap/icon_update"
                android:drawablePadding="10dp"
                android:padding="10dp"
                android:text="@string/current_version"
                android:textColor="@color/color_black"
                android:textSize="@dimen/text_commen_size" />

            <TextView
                android:id="@+id/tv_version_warn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/version_update"
                android:visibility="gone"
                android:padding="3dp"
                android:background="@drawable/update_warn_point"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_small_8sp" />

            <TextView
                android:id="@+id/tv_version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:padding="10dp"
                android:drawablePadding="5dp"
                android:textColor="@color/color_343638"
                android:textSize="@dimen/text_commen_size" />

        </LinearLayout>

        <include layout="@layout/line_margin_layout" />

        <TextView
            android:id="@+id/tv_share"
            style="@style/user_text_style"
            android:drawableLeft="@mipmap/icon_share"
            android:text="@string/share" />

        <include layout="@layout/line_margin_layout" />

        <TextView
            android:id="@+id/tv_about"
            style="@style/user_text_style"
            android:drawableLeft="@mipmap/icon_about"
            android:text="@string/about_us" />

        <include layout="@layout/line_margin_layout" />

        <LinearLayout
            android:id="@+id/ll_clear_cache"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:background="@android:color/white"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@mipmap/icon_clear"
                android:drawablePadding="10dp"
                android:padding="10dp"
                android:text="@string/clear"
                android:textColor="@color/color_black"
                android:textSize="@dimen/text_commen_size" />

            <TextView
                android:id="@+id/tv_cache"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:padding="10dp"
                android:textColor="@color/color_343638"
                android:textSize="@dimen/text_commen_size" />

        </LinearLayout>

        <include layout="@layout/line_margin_layout" />
    </LinearLayout>
</ScrollView>
